[workspace]
members = ["02_mini-async-runtime-unix", "01_mini_redis", "00_leetcode_algorithm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["qyuzh <qyuzhang22@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
