[workspace]
members = [
    "04_monkey-in-rust",
    "03_rust-lang-learning",
    "02_mini-async-runtime-unix",
    "01_mini-redis",
    "00_leetcode-algorithm",
    "05_my-thread-pool",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["qyuzh <qyuzhang22@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
